[package]
name = "odbc-iter-schema"
version = "0.1.0"
authors = ["Jakub Pastuszek <jpastuszek@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
odbc-iter = "0.2.2"
problem = "5.3.0"
ensure = "0.3.1"
log = "0.4.8"
