[package]
name = "odbc-iter-schema"
version = "0.1.0"
authors = ["Jakub Pastuszek <jpastuszek@protonmail.com>"]
description = "Utils for working with ODBC database schema"
repository = "https://github.com/jpastuszek/odbc-iter-schema"
documentation = "https://docs.rs/odbc-iter-schema"
readme = "README.md"
keywords = ["odbc", "database"]
categories = ["database"]
license = "MIT"
edition = "2018"

[dependencies]
odbc-iter = "0.2.2"
problem = "5.3.0"
ensure = "0.3.1"
log = "0.4.8"
